<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:background="@color/main_2"
    android:divider="@drawable/dividing_line"
    android:showDividers="middle|end|none"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_24sp"
        android:gravity="center"
        android:textSize="@dimen/txt_18sp"
        android:textColor="@color/white"
        android:background="@color/main_3"
        android:text="@string/production_information"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/txt_5sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/t2_Style"/>

        <TextView
            android:id="@+id/tv_Style"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:hint="@string/t2_Style"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/t2_SMV"/>

        <TextView
            android:id="@+id/tv_SMV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/t2_Style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/t2_PO"/>

        <TextView
            android:id="@+id/tv_PO"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:hint="@string/t2_Style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/t2_Total"/>

        <TextView
            android:id="@+id/tv_Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/t2_Style"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/t2_EEF"/>

        <TextView
            android:id="@+id/tv_EEF_Target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/t2_Style"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/t2_Output"/>

        <TextView
            android:id="@+id/tv_Output_Target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/t2_Style"/>
    </LinearLayout>
</LinearLayout>