<?xml version="1.0" encoding="utf-8"?>
<!--信息展示-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/main_2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_24sp"
        android:gravity="center"
        android:textSize="@dimen/txt_18sp"
        android:textColor="@color/white"
        android:background="@color/main_3"
        android:text="@string/worker_information"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:background="@color/main_2">

        <!--用户信息-->
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="85dp"
            android:layout_marginStart="@dimen/txt_5sp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:divider="@drawable/dividing_line"
            android:showDividers="end|middle">
            <!--名称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:divider="@drawable/dividing_line">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/t_Name"/>

                <TextView
                    android:id="@+id/tv_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <!--ID-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/t_ID"/>

                <TextView
                    android:id="@+id/tv_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!--位置-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/t_Position"/>

                <TextView
                    android:id="@+id/tv_Position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!--产线-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/t_Line"/>

                <TextView
                    android:id="@+id/tv_Line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!--工厂-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/t_Factory"/>

                <TextView
                    android:id="@+id/tv_Factory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <!--图片-->
        <LinearLayout
            android:layout_width="68dp"
            android:layout_height="85dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_people"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/photo"/>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>