<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    android:layout_width="256dp"
    android:layout_height="120dp"
    android:background="@color/main_0"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_Productivity_Statistics"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_24sp"
        android:textSize="@dimen/txt_18sp"
        android:textColor="@color/white"
        android:background="@color/main_3"
        android:gravity="center"
        android:text="@string/Productivity_Statistics"
        />

    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="1dp"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:background="@color/main_2"
            android:text=""
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_hourly"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:background="@color/main_2"
            android:gravity="center"
            android:text="@string/t3_Hourly"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/main_2"
            android:text="@string/t3_Total"/>

    </LinearLayout>

    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/main_2"
                    android:gravity="center"
                    android:text="@string/t3_Station"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/main_2"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/t3_Line_qty"/>

            </LinearLayout>


            <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/main_2"
                    android:gravity="center"
                    android:text="@string/t3_Output"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/main_2"
                    android:gravity="center"
                    android:text="@string/t3_EFF"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="0.9"
                    android:background="@color/main_2"
                    android:gravity="center"
                    android:text="@string/t3_Output"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/main_2"
                    android:gravity="center"
                    android:text="@string/t3_EFF"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>


        <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_0"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_00"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="0.9"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_0"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_00"
                    android:textColor="@color/orange" />


            </LinearLayout>

            <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_0"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_00"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="0.9"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_0"
                    android:textColor="@color/orange" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/t3_00"
                    android:textColor="@color/orange" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>